// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrivateReplyButton/> render should render a disabled button 1`] = `
<div
  id="private-reply-button-1"
>
  <button
    aria-disabled="true"
    class="wrapper container button fill primary medium isDisabled"
    href="#"
    type="submit"
  >
    <div
      class="logoWrapper"
    >
      <div
        class="logo messengerIcon disabled"
        style="mask-image: url(test-file-stub);"
      />
    </div>
    Message
  </button>
</div>
`;

exports[`<PrivateReplyButton/> render should render a disabled button 2`] = `
<div
  id="private-reply-button-1"
>
  <button
    aria-disabled="true"
    class="wrapper container button fill primary medium isDisabled"
    href="#"
    type="submit"
  >
    <div
      class="logoWrapper"
    >
      <div
        class="logo messengerIcon disabled"
        style="mask-image: url(test-file-stub);"
      />
    </div>
    Message
  </button>
</div>
`;

exports[`<PrivateReplyButton/> render should render the button 1`] = `
<div
  id="private-reply-button-1"
>
  <button
    aria-disabled="false"
    class="wrapper container button fill primary medium"
    href="#"
    type="submit"
  >
    <div
      class="logoWrapper"
    >
      <div
        class="logo messengerIcon"
        style="mask-image: url(test-file-stub);"
      />
    </div>
    Message
  </button>
</div>
`;
